--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,24 +4,25 @@ patch_and_build_signal:
   stage: build
   script:
     - "apt update && apt install -y git"
-#    - "apt install -y default-jdk"
-#    - "apt install -y lib32stdc++6 unzip wget"
-#    - "wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip" # download android sdk
-#    - "unzip sdk-tools-linux-3859397.zip -d /sdk-tools-linux" # unzip android sdk
-#    - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
-#    - "export JAVA_OPTS=\"-Xmx3096M\""
-#    - "export GRADLE_OPTS=\"-Dorg.gradle.jvmargs=-Xmx4608M\""
-#    - "export ANDROID_HOME=\"/sdk-tools-linux\"" # set ANDROID_HOME env var
-#    - "git clone https://github.com/WhisperSystems/Signal-Android.git && cd Signal-Android && git checkout v4.16.4" # get signal sources
-#    - "./gradlew clean" # cleanup
-#    - "rm $CI_PROJECT_DIR/Signal-Android/test/unitTest/java/org/thoughtcrime/securesms/jobs/AttachmentDownloadJobTest.java -f" # because of https://github.com/signalapp/Signal-Android/issues/7458
-#    - "rm $CI_PROJECT_DIR/Signal-Android/test/unitTest/java/org/thoughtcrime/securesms/crypto/MasterCipherTest.java -f" # because of https://github.com/signalapp/Signal-Android/issues/7458
-#    - "git apply $CI_PROJECT_DIR/destroy-gcm-support.patch" # apply our patch
-#    - "./gradlew build"
+    - "apt install -y default-jdk"
+    - "apt install -y lib32stdc++6 unzip wget"
+    - "wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip" # download android sdk
+    - "unzip sdk-tools-linux-3859397.zip -d /sdk-tools-linux" # unzip android sdk
+    - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
+    - "export JAVA_OPTS=\"-Xmx3096M\""
+    - "export GRADLE_OPTS=\"-Dorg.gradle.jvmargs=-Xmx4608M\""
+    - "export ANDROID_HOME=\"/sdk-tools-linux\"" # set ANDROID_HOME env var
+    - "git clone https://github.com/WhisperSystems/Signal-Android.git && cd Signal-Android && git checkout v4.16.4" # get signal sources
+    - "./gradlew clean" # cleanup
+    - "rm $CI_PROJECT_DIR/Signal-Android/test/unitTest/java/org/thoughtcrime/securesms/jobs/AttachmentDownloadJobTest.java -f" # because of https://github.com/signalapp/Signal-Android/issues/7458
+    - "rm $CI_PROJECT_DIR/Signal-Android/test/unitTest/java/org/thoughtcrime/securesms/crypto/MasterCipherTest.java -f" # because of https://github.com/signalapp/Signal-Android/issues/7458
+    - "git apply $CI_PROJECT_DIR/destroy-gcm-support.patch" # apply our patch
+    - "./gradlew build assembleWebsiteRelease assembleWebsiteDebug assembleRelease assembleDebug"
+    - "mkdir -p /artifacts"
+    - "mv $(find $CI_PROJECT_DIR/Signal-Android/build/outputs -name *.apk) /artifacts"
   artifacts:
     paths:
-#      - "$CI_PROJECT_DIR/Signal-Android/build/outputs/apk/**/*.apk"
-      - "echo $CI_PROJECT_DIR/"
+      - "/artifacts/*.apk"
   only:
     - master
     
