--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,13 @@ patch_and_build_signal:
     - "rm $CI_PROJECT_DIR/Signal-Android/test/unitTest/java/org/thoughtcrime/securesms/crypto/MasterCipherTest.java -f" # because of https://github.com/signalapp/Signal-Android/issues/7458
     - "git apply $CI_PROJECT_DIR/destroy-gcm-support.patch" # apply our patch
     - "./gradlew build assembleWebsiteRelease assembleWebsiteDebug assembleRelease assembleDebug"
-    - "mkdir -p /artifacts"
-    - "mv $(find $CI_PROJECT_DIR/Signal-Android/build/outputs -name *.apk) /artifacts"
+    - "mkdir -p $CI_PROJECT_DIR/artifacts"
+    - "find $CI_PROJECT_DIR/Signal-Android/build/outputs -name *.apk"
+    - "mv $(find $CI_PROJECT_DIR/Signal-Android/build/outputs -name *.apk) $CI_PROJECT_DIR/artifacts"
+    - "ls -lh $CI_PROJECT_DIR/artifacts"
   artifacts:
     paths:
-      - "/artifacts/*.apk"
+      - "$CI_PROJECT_DIR/artifacts/*.apk"
   only:
     - master
     
