--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ patch_and_build_signal:
     - "apt install -y default-jdk"
     - "apt install -y lib32stdc++6 unzip wget"
     - "wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip" # download android sdk
+    - "echo '444e22ce8ca0f67353bda4b85175ed3731cae3ffa695ca18119cbacef1c1bea0  sdk-tools-linux-3859397.zip' |sha256sum -c"
     - "unzip sdk-tools-linux-3859397.zip -d /sdk-tools-linux" # unzip android sdk
     - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
     - "export JAVA_OPTS=\"-Xmx3096M\""
