--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ patch_and_build_signal:
     - "ls -lh $CI_PROJECT_DIR/artifacts"
     - "echo \"$KEYSTORE_CRT\" > /keystore.rfc"
     - "keytool -importcert -alias app -file /keystore.rfc -noprompt -storepass \"$KEYSTORE_PASSPHR\" -keystore /keystore.keystore"
-    - "for f in $CI_PROJECT_DIR/artifacts/*unsigned*.apk; do SIGNED_FNAME=\"$(echo $f |sed 's/unsigned/signed/g')\"; echo \"Signing $f\"; jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore signal-gcm-less.keystore -storepass \"$KEYSTORE_PASSPHR\" $f -signedjar \"$SIGNED_FNAME\" app ;done"
+    - "for f in $CI_PROJECT_DIR/artifacts/*unsigned*.apk; do SIGNED_FNAME=\"$(echo $f |sed 's/unsigned/signed/g')\"; echo \"Signing $f\"; jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore /keystore.keystore -storepass \"$KEYSTORE_PASSPHR\" $f -signedjar \"$SIGNED_FNAME\" app ;done"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
     # https://stackoverflow.com/a/40064149
     # keytool -genkey -v -keystore my.keystore -keyalg RSA -keysize 2048 -validity 10000 -alias app
