--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,13 +14,16 @@ patch_and_build_signal:
     - "export JAVA_OPTS=\"-Xmx3096M\""
     - "export GRADLE_OPTS=\"-Dorg.gradle.jvmargs=-Xmx4608M\""
     - "export ANDROID_HOME=\"/sdk-tools-linux\"" # set ANDROID_HOME env var
-    - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
+    
     - "mkdir -p $ANDROID_HOME/licenses/"
     # sdkmanager --list
     # sdkmanager --install "build-tools;27.0.3" ...
     # hashes are available at ~/Android/Sdk/licenses/android-sdk-license
+    - "echo $ANDROID_HOME"
     - "echo d56f5187479451eabf01fb78af6dfcb131a6481e > $ANDROID_HOME/licenses/android-sdk-license"
     - "echo 8933bad161af4178b1185d1a37fbf41ea5269c55 >> $ANDROID_HOME/licenses/android-sdk-license"
+    - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
+    - "yes | sdkmanager 'build-tools;27.0.3' 'platforms;android-28' 'platform-tools'||true"
     - "git clone https://github.com/WhisperSystems/Signal-Android.git && cd Signal-Android && git checkout v4.31.6" # get signal sources
     - "for f in res/values*/strings.xml; do sed -i 's/<string.*name=\"app_name\".*>.*<\\/string>/<string name=\"app_name\">Langis<\\/string>/g' \"$f\"; done" # app rename
     - "./gradlew clean" # cleanup
