--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,10 @@ stages:
 patch_and_build_signal:
   stage: build
   script:
-    - "export LATEST_SIGNAL_TAG=$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\(.*\)$|\1|' | grep -v '\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)"
-    - echo "Latest git version is $LATEST_SIGNAL_TAG"
     - "apt update && apt install -y git"
+    - "export LATEST_SIGNAL_TAG=\"$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\\(.*\\)$|\\1|' | grep -v '\\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)\""
+    - "if [[ -z \"$LATEST_SIGNAL_TAG\" ]]; then exit 2; fi"
+    - "echo \"Latest git version is $LATEST_SIGNAL_TAG\""
     - "apt install -y default-jdk"
     - "apt install -y lib32stdc++6 unzip wget opensc"
     - "wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" # download android sdk
