--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ stages:
   - build
 patch_and_build_signal:
   stage: build
+  before_script:
+    - "curl $NOTIFICATION_URL/?pipeline_url=CI_PIPELINE_URL"
   script:
     - "apt update && apt install -y git"
     - "export LATEST_SIGNAL_TAG=\"$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\\(.*\\)$|\\1|' | grep -v '\\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)\""
@@ -49,9 +51,11 @@ patch_and_build_signal:
     - "rm $CI_PROJECT_DIR/artifacts/*unsigned*.apk"
     - "cd $CI_PROJECT_DIR/artifacts/ && for f in $(find . -iname \"*signal*.apk\"); do mv \"$f\" \"$(echo $f|sed \"s/[Ss][Ii][Gg][Nn][Aa][Ll]/langis/\")\"; done"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
+  after_script:
+    - "curl $NOTIFICATION_URL"
   artifacts:
     paths:
-      - "$CI_PROJECT_DIR/artifacts/*.apk"
+      - "curl $NOTIFICATION_URL/?pipeline_url=CI_PIPELINE_URL"
     
     
     
