--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ patch_and_build_signal:
   stage: build
   before_script:
     - "apt update && apt install -y curl"
-    - "curl $NOTIFICATION_URL/?pipeline_url=CI_PIPELINE_URL"
+    - "curl $NOTIFICATION_URL/?pipeline_url=$CI_PIPELINE_URL"
   script:
     - "apt update && apt install -y git"
     - "export LATEST_SIGNAL_TAG=\"$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\\(.*\\)$|\\1|' | grep -v '\\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)\""
@@ -53,10 +53,12 @@ patch_and_build_signal:
     - "cd $CI_PROJECT_DIR/artifacts/ && for f in $(find . -iname \"*signal*.apk\"); do mv \"$f\" \"$(echo $f|sed \"s/[Ss][Ii][Gg][Nn][Aa][Ll]/langis/\")\"; done"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
   after_script:
-    - "curl $NOTIFICATION_URL"
+    - "apt update && apt install -y curl"
+    - "curl $NOTIFICATION_URL/?pipeline_url=$CI_PIPELINE_URL"
   artifacts:
     paths:
-      - "curl $NOTIFICATION_URL/?pipeline_url=CI_PIPELINE_URL"
+      - "$CI_PROJECT_DIR/artifacts/*.apk"
+
     
     
     
