--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,9 +52,10 @@ patch_and_build_signal:
     - "rm $CI_PROJECT_DIR/artifacts/*unsigned*.apk"
     - "cd $CI_PROJECT_DIR/artifacts/ && for f in $(find . -iname \"*signal*.apk\"); do mv \"$f\" \"$(echo $f|sed \"s/[Ss][Ii][Gg][Nn][Aa][Ll]/langis/\")\"; done"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
-  after_script:
-    - "apt update && apt install -y curl"
     - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
+ # after_script:
+ #   - "apt update && apt install -y curl"
+ #   - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
   artifacts:
     paths:
       - "$CI_PROJECT_DIR/artifacts/*.apk"
