--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,46 +1,41 @@
-image: "debian:stretch"
-#variables:
-#  signal_version: "v4.42.0"
+image: docker:19.03.12
+
+variables:
+  DOCKER_TLS_CERTDIR: "/certs"
+services:
+  - docker:19.03.12-dind
+
 stages:
   - build
+
 patch_and_build_signal:
   stage: build
   before_script:
-    - "apt update && apt install -y curl"
+    - "apk add curl"
     - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
   script:
-    - "apt update && apt install -y git"
+    - apk add git curl
+    - apk add openjdk11-jdk # (jarsigner)
     - "export LATEST_SIGNAL_TAG=\"$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\\(.*\\)$|\\1|' | grep -v '\\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)\""
     - "if [[ -z \"$LATEST_SIGNAL_TAG\" ]]; then exit 2; fi"
     - "echo \"Latest git version is $LATEST_SIGNAL_TAG\""
-    - "apt install -y default-jdk"
-    - "apt install -y lib32stdc++6 unzip wget opensc"
-    - "wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" # download android sdk
-    - "echo '92ffee5a1d98d856634e8b71132e8a95d96c83a63fde1099be3d86df3106def9  sdk-tools-linux-4333796.zip' |sha256sum -c"
-    - "unzip sdk-tools-linux-4333796.zip -d /sdk-tools-linux" # unzip android sdk
-    - "/sdk-tools-linux/tools/bin/sdkmanager --update"
+
+    - git clone https://github.com/WhisperSystems/Signal-Android.git && cd Signal-Android && git checkout $LATEST_SIGNAL_TAG
     
-    - "export JAVA_OPTS=\"-Xmx3096M\""
-    - "export GRADLE_OPTS=\"-Dorg.gradle.jvmargs=-Xmx4608M\""
-    - "export ANDROID_HOME=\"/sdk-tools-linux\"" # set ANDROID_HOME env var
-
-    - "echo $ANDROID_HOME"
-    - "mkdir -p $ANDROID_HOME/licenses"
-    - "echo d56f5187479451eabf01fb78af6dfcb131a6481e > $ANDROID_HOME/licenses/android-sdk-license"
-    - "echo 8933bad161af4178b1185d1a37fbf41ea5269c55 >> $ANDROID_HOME/licenses/android-sdk-license"
-    - "yes | /sdk-tools-linux/tools/bin/sdkmanager --licenses || true" # to accept licenses
-    - "yes | /sdk-tools-linux/tools/bin/sdkmanager 'build-tools;27.0.3' 'platforms;android-28' 'platform-tools' > /dev/null ||true"
-
-    - "git clone https://github.com/WhisperSystems/Signal-Android.git && cd Signal-Android && git checkout $LATEST_SIGNAL_TAG" # get signal sources
+    - "git apply $CI_PROJECT_DIR/destroy-gcm-support.patch" # apply our patch
     - "for f in app/src/main/res/values*/strings.xml; do sed -i 's/<string.*name=\"app_name\".*>.*<\\/string>/<string name=\"app_name\">Langis<\\/string>/g' \"$f\"; done" # app rename
     
-    - "./gradlew clean" # cleanup
-    - "git apply $CI_PROJECT_DIR/destroy-gcm-support.patch" # apply our patch
-    #- "git apply $CI_PROJECT_DIR/fix-build-regretion-on-v4.30.2.patch"
-    - "./gradlew --stacktrace assembleWebsiteRelease" #assembleWebsiteDebug
+    - cd reproducible-builds
+    # - docker build -t signal-android .
+    - docker pull $CI_REGISTRY_IMAGE:latest || true
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+
+    
+    - cd $CI_PROJECT_DIR/Signal-Android
+    - docker run --rm -v $(pwd):/project -w /project $CI_REGISTRY_IMAGE:latest ./gradlew clean assembleWebsiteProd
+
     - "mkdir -p $CI_PROJECT_DIR/artifacts"
-    - "find $CI_PROJECT_DIR/Signal-Android/app/build/outputs -name *.apk"
-    - "mv $(find $CI_PROJECT_DIR/Signal-Android/app/build/outputs -name *.apk) $CI_PROJECT_DIR/artifacts"
+    - "mv $(find $CI_PROJECT_DIR/Signal-Android/app/build/outputs/apk/websiteProd/release -name *.apk) $CI_PROJECT_DIR/artifacts"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
     # To sign packages ; you'll need a keystore with your certificate
     # signing packages is important, it also allows application update without removing previous installed version of the app
@@ -49,14 +44,11 @@ patch_and_build_signal:
     #   cat keystore.keystore | base64 > keystore.base64
     # then we provide that base64 encoded file to the CI ; you'll get it back to its original format write after this command is run:
     - "echo \"$KEYSTORE_CRT\" |base64 -d > /keystore.keystore"
-    - "for f in $CI_PROJECT_DIR/artifacts/*unsigned*.apk; do SIGNED_FNAME=\"$(echo $f |sed 's/unsigned/signed/g')\"; echo \"Signing $f\"; jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore /keystore.keystore -storepass \"$KEYSTORE_PASSPHR\" $f -signedjar \"$SIGNED_FNAME\" app ;done"
+    - "for f in $CI_PROJECT_DIR/artifacts/*unsigned*.apk; do SIGNED_FNAME=\"$(echo $f |sed 's/unsigned/signed/g')\"; echo \"Signing $f\"; /usr/lib/jvm/java-11-openjdk/bin/jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore /keystore.keystore -storepass \"$KEYSTORE_PASSPHR\" $f -signedjar \"$SIGNED_FNAME\" app ;done"
     - "rm $CI_PROJECT_DIR/artifacts/*unsigned*.apk"
     - "cd $CI_PROJECT_DIR/artifacts/ && for f in $(find . -iname \"*signal*.apk\"); do mv \"$f\" \"$(echo $f|sed \"s/[Ss][Ii][Gg][Nn][Aa][Ll]/langis/\")\"; done"
     - "ls -lh $CI_PROJECT_DIR/artifacts"
     - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
- # after_script:
- #   - "apt update && apt install -y curl"
- #   - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
   artifacts:
     expire_in: 1 mos
     paths:
