--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:20.10
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
-  DOCKER_HOST: "file:///var/run/docker.sock"
+  DOCKER_HOST: "unix:///var/run/docker.sock"
 services:
   - docker:20.10-dind
 
@@ -15,6 +15,7 @@ patch_and_build_signal:
     - "apk add curl"
     - "curl $NOTIFICATION_URL/?pipeline_id=$CI_PIPELINE_ID&job_id=$CI_JOB_ID"
   script:
+    - ls var/run/docker.sock
     - docker ps > /dev/null
     - apk add git curl jq
     - "export LATEST_SIGNAL_TAG=\"$(curl https://api.github.com/repos/signalapp/Signal-Android/tags | jq -r '.[] .name' | sed '/-/!{s/$/_/}' | sort -V | sed 's/_$//'|tail -n1)\""
