--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,16 @@ patch_and_build_signal:
   script:
     - docker ps > /dev/null
     - apk add git curl jq
+
+    # publish langis sources
+    - "mkdir $CI_PROJECT_DIR/sources/"
+    - ls $CI_PROJECT_DIR/
+    - cp $CI_PROJECT_DIR/.gitlab-ci.yml $CI_PROJECT_DIR/sources/
+    - cp $CI_PROJECT_DIR/*.patch $CI_PROJECT_DIR/sources/
+    - cp $CI_PROJECT_DIR/*.sh $CI_PROJECT_DIR/sources/
+    - tar cfz $CI_PROJECT_DIR/sources/archive.tar.gz $CI_PROJECT_DIR/sources/
+
+
     - "export LATEST_SIGNAL_TAG=\"$(curl https://api.github.com/repos/signalapp/Signal-Android/tags | jq -r '.[] .name' | sed '/-/!{s/$/_/}' | sort -V | grep -v nightly | sed 's/_$//'|tail -n1)\""
     #- "export LATEST_SIGNAL_TAG=\"$(git ls-remote --tags https://github.com/signalapp/Signal-Android | sed 's|.*/\\(.*\\)$|\\1|' | grep -v '\\^' | sort -t. -k1,1nr -k2,2nr -k3,3nr|grep -e '^v.*' | head -n 1)\""
     - "if [[ -z \"$LATEST_SIGNAL_TAG\" ]]; then exit 2; fi"
@@ -76,6 +86,7 @@ patch_and_build_signal:
     expire_in: 1 mos
     paths:
       - "$CI_PROJECT_DIR/artifacts/*.apk"
+      - "$CI_PROJECT_DIR/sources/"
 
 upload_vt:
   stage: checks
@@ -92,3 +103,4 @@ upload_vt:
     expire_in: 1 mos
     paths:
       - "$CI_PROJECT_DIR/artifacts/*.apk"
+      - "$CI_PROJECT_DIR/sources/"
